User authentication done

--- a/NotesDemo.xcodeproj/xcshareddata/xcschemes/NotesDemo.xcscheme
+++ b/NotesDemo.xcodeproj/xcshareddata/xcschemes/NotesDemo.xcscheme
@@ -49,6 +49,13 @@
             ReferencedContainer = "container:NotesDemo.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "CG_CONTEXT_SHOW_BACKTRACE"
+            value = "Yes"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
